--- a/src/vistas/Inventario/Historial.html
+++ b/src/vistas/Inventario/Historial.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../resources/CSS/BarraYOpciones.css">
+    <link rel="stylesheet" href="../../resources/CSS/vistaInventario/BarraOpcionesInventario.css">
     <link rel="stylesheet" href="../../resources/CSS/vistaInventario/inventarioHistorial.css">
     <title>Inventario Historial</title>
 </head>
@@ -33,6 +33,7 @@
             <a a href="../../index.html"><input type="button" value="Cerrar Sesion" class="btnCerrarSesion"></a>
         </div>
     </div>
+    <div class="capa"></div>
     <div class="Contenido">
         <div class="Subcontenido1">
             <span>Historial</span>
@@ -69,5 +70,5 @@
         </div>
     </div>
 </body>
-<script src="../../resources/JavaScript/inventario/mostrarDatos.js" type="module"></script>
+<script src="../../resources/JavaScript/Administrador/mostrarDatos.js" type="module"></script>
 </html>
